# Vaultwarden-Windows-GUI

./: .gitignore  PERFORMANCE_DESIGN.md  README.md  build.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-and-release.yml  build.yml
.playwright-cli/: page-2026-03-28T12-08-43-181Z.yml
docs/superpowers/plans/: 2026-03-30-performance-optimization-plan.md
scripts/: generate_icons.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: autostart.rs  background.rs  backup.rs  config.rs  github.rs  ip.rs  logs.rs  mod.rs  process.rs  utils.rs
src/components/: BackupPanel.tsx  BackupSettings.tsx  ConfigPanel.tsx  EnvironmentPanel.tsx  LanguageSwitcher.tsx  LogViewer.tsx  ServiceControl.tsx  StatusBar.tsx  ThemeSwitcher.tsx  UpdateButton.tsx  VersionList.tsx
src/i18n/: en.ts  index.tsx  zh.ts
src/stores/: appStore.ts  storeService.ts
src/styles/: global.css
