[package]
name = "vaultwarden-gui"
version = "1.0.0"
description = "Vaultwarden Manager"
authors = ["you"]
edition = "2024"

[lib]
name = "vaultwarden_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
tar = "0.4"
flate2 = "1.0"
zip = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
